Contains the fix for rnartistcore concerning the scheme value dumped with quotes.